# gospel-keys

./: .gitignore  AI_INTEGRATION.md  ANALYSIS_EXECUTIVE_SUMMARY.md  API_TESTING_GUIDE.md  BACKEND_CLEANUP_COMPLETE.md  BACKEND_FIXES.md  BACKEND_FIX_APPLIED.md  BOOTSTRAP_GENERATION_STATUS.md  CLAUDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTENT_GENERATION_SUMMARY.md  CURRICULUM_API_EXAMPLES.md  CURRICULUM_NEW_ENHANCEMENTS.md  END_TO_END_VERIFICATION.md  FINAL_SESSION_SUMMARY.md  GEMINI.md  GENERATED_CONTENT_INDEX.md  GENERATED_CONTENT_INTEGRATION.md  GENERATOR_REFACTORING_COMPLETE.md  Gospel_Keys_Curriculum_API.postman_collection.json  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  MIDI_DATASET_COLLECTION_GUIDE.md  PHASE1_COMPLETE.md  PHASE1_HYBRID_MUSIC_GENERATOR.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_STATUS.md  PHASE2_MEMORY_OPTIMIZED_PLAN.md  PHASE3_GENERATION_COMPLETE.md  PHASE6_IMPLEMENTATION_SUMMARY.md  PHASE7_COMPLETE.md  PHASE_2_UI_COMPLETE.md  PROJECT_STATUS.md  PROMPT_ARCHITECTURE_IMPLEMENTATION.md  ROLE_GUIDES_SUMMARY.md  TECHNICAL_DIAGRAMS_SUMMARY.md  TYPESCRIPT_CLEANUP_PROGRESS.md  UI_REWRITE_STATUS.md  VERIFY_CONTENT.sh  analyze_bar_variation.py  (+12 more)
backend/: .dockerignore  .env.example  .gitignore  COMPLETE_GENRE_IMPLEMENTATION.md  Dockerfile  Dockerfile.dev  LOCAL_LLM_INTEGRATION_COMPLETE.md  ML_FEATURES_COMPLETE.md  NEW_GENRES_AND_FEATURES_COMPLETE.md  QUICK_START_NEW_GENRES.md  README.md  alembic.ini  curriculum_63d7a261.json  curriculum_63d7a261.md  debug_ai.py  docker-compose.prod.yml  docker-compose.yml  download_llama_overnight.py  download_log.txt  generate_all_overnight.py  generate_musical_files.py  generation_log.txt  import_templates_to_db.py  list_models.py  migrate_to_refactored_generators.py  piano_keys.db  pyproject.toml  temp_openapi.json  test_ai_integration.py  test_chord_init.py  test_curriculum_template.py  test_enhanced_tutorial_service.py  test_exercise_library.py  test_expansions.py  test_feedback_generator.py  test_gospel_request.json  test_hybrid_api.py  test_inversions.py  test_lick_database.py  test_lick_generator_basic.py  (+13 more)
backend/alembic/: env.py
backend/alembic/versions/: 0d47ee24b935_add_exercise_library_tables.py  170e726b0a9d_add_phase_3_real_time_analysis_tables.py  1eabc1835448_add_exercise_audio_fields.py  2b8b44072eaa_add_gospel_piano_application_fields.py  7545e0e9dc36_add_model_usage_tracking.py  7787f7a3a199_add_user_model_and_foreign_keys.py  8948c5427069_add_phase_4_analysis_tables.py  d0598504e64c_add_tutorial_and_adaptation_fields.py  d8f3c2a91b45_add_curriculum_tables.py  fef0d9cc5b77_add_exercise_library_tables_only.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/blues/: theory_integration.py
backend/app/core/: __init__.py  celery_app.py  config.py  gpu.py  security.py
backend/app/data/: generate_comprehensive_content.py
backend/app/database/: curriculum_models.py  models.py  session.py
backend/app/gospel/: __init__.py  theory_integration.py
backend/app/jazz/: __init__.py  lick_patterns.py  theory_integration.py
backend/app/latin/: __init__.py
backend/app/neosoul/: theory_integration.py
backend/app/pipeline/: __init__.py  audio_effects.py  audio_extractor.py  blues_analyzer.py  cadence_detector.py  chord_detector.py  classical_analyzer.py  crepe_analysis.py  downloader.py  genre_classifier.py  harmonic_function_analyzer.py  jazz_analyzer.py  lick_analyzer.py  lick_database_expanded.py  lick_generator_engine.py  markov_lick_model.py  midi_converter.py  modulation_detector.py  notation_export.py  progression_detector.py  reharmonization_engine.py  reharmonization_orchestrator.py  reharmonization_quality_metrics.py  reharmonization_strategies.py  source_separator.py  tension_analyzer.py  theory_scorer.py  transcription_comparison.py  voice_leading_analyzer.py  voicing_analyzer.py
backend/app/prompts/: README.md  __init__.py  builders.py  metadata.py  system_prompts.py
backend/app/reggae/: __init__.py
backend/app/rnb/: __init__.py
backend/app/schemas/: ai.py  assessment.py  blues.py  classical.py  curriculum.py  feedback.py  gospel.py  jazz.py  latin.py  library.py  music_generation.py  neosoul.py  realtime_analysis.py  reggae.py  rnb.py  user.py  (+1 more)
backend/data/: DATASET_README.md  gospel_youtube_urls.json
backend/docker/: prometheus.yml
backend/docs/: ADVANCED_FEATURES_GUIDE.md  DOCKER.md  EXERCISE_LIBRARY_IMPLEMENTATION_COMPLETE.md  MLX_GOSPEL_COMPLETE_GUIDE.md  OVERNIGHT_DOWNLOAD_INSTRUCTIONS.md  PRODUCTION_READY.md
backend/examples/: advanced_features_demo.py
backend/rust-audio-engine/: Cargo.toml
backend/scripts/: analyze_variations.py  build_gospel_dataset.py  check_overnight_status.sh  collect_midi_dataset.sh  convert_tokens_to_text.py  download_overnight.sh  filter_lakh_by_genre.py  generate_bootstrap_dataset.py  generate_curriculum_exercises.py  generate_gospel_batch.py  generate_theory_data.py  ingest_theory.py  monitor_dataset_progress.py  musescore_scraper.py  prepare_stage1_dataset.py  prepare_training_data.py  quickstart.sh  research_music_knowledge.py  run_complete_overnight_generation.sh  test_hybrid_generator.py  test_hybrid_permutations.py  train_mlx_gospel.py  update_music_knowledge.py  validate_gospel_midis.py  verify_all_generators.py  verify_dynamic_generation.py
backend/tests/: conftest.py  test_advanced_analysis.py  test_analysis_api.py  test_auth.py  test_base_genre_generator.py  test_dynamics_analysis.py  test_exercise_generator_engine.py  test_full_system.py  test_generator_utils.py  test_gpu_midi.py  test_harmonic_functions.py  test_jazz_analyzer.py  test_pitch_detection.py  test_progression_detector.py  test_srs_service.py  test_theory_library.py  test_voice_leading.py  test_voice_leading_neo_riemannian.py  test_voice_leading_optimization.py  test_voicing_analyzer.py  test_voicings.py  test_websocket_server.py
rust-audio-engine/: Cargo.toml  README.md
rust-audio-engine/src/: analyzer.rs  lib.rs  metal_effects.rs  synthesizer.rs  waveform.rs
(+508 files in other folders)
