[project]
name = "piano-keys-backend"
version = "2.0.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    # Core FastAPI
    "fastapi[standard]>=0.124.4",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # File handling
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.20",
    # Pipeline - YouTube download
    "yt-dlp>=2024.0.0",
    # Pipeline - Audio processing
    "ffmpeg-python>=0.2.0",
    # Pipeline - Source separation
    "demucs>=4.0.0",
    # Pipeline - MIDI transcription
    # "basic-pitch>=0.4.0",  # Requires TensorFlow, not compatible with Python 3.13 yet
    "pretty-midi>=0.2.11",
    # Pipeline - Audio analysis
    "librosa>=0.10.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    # Phase 2 - Database & export
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "music21>=8.1.0",
    # Phase 4 - Multi-genre advanced analysis (Python-only)
    # "crepe>=0.0.13",       # Neural pitch tracking - Requires TensorFlow, not compatible with Python 3.13 yet
    "scikit-learn>=1.4.0", # Genre classification
    # System dependencies
    "setuptools>=80.9.0",
    # AI APIs
    "google-generativeai>=0.3.0",
    "anthropic>=0.39.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0",
    "structlog>=24.0.0",
    # Modern Music Libraries
    "musicpy>=1.8.0",
    "essentia>=2.1b6.dev1110",
    # "audiocraft>=1.2.0", # Incompatible with Python 3.13 (requires torch==2.1.0)
    "miditok>=3.0.0",
    "verovio>=4.0.0",
    # PyTorch for GPU acceleration (Apple Silicon MPS support)
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    # GPU-accelerated pitch detection (Python 3.13 compatible)
    "torchcrepe>=0.0.21",
    # Stable Audio (Python 3.13 compatible alternative to AudioCraft)
    "diffusers>=0.31.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "celery>=5.6.0",
    "redis>=7.1.0",
    "mlx>=0.30.0",
    "mlx-lm>=0.28.4",
    "mido>=1.2.10",
    # AI Music Generation - Using MLX (M-series optimized, no dependency conflicts)
    # "musiclang-predict>=1.0.0",
    "huggingface-hub>=0.16.0",
    # "basic-pitch>=0.4.0",  # Requires TensorFlow, not compatible with Python 3.13 yet
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

# Note: Essentia and Omnizart excluded due to dependency conflicts
# - Essentia requires C++ compilation and complex build
# - Omnizart requires librosa<0.9 (we use >=0.10)
# These can be installed separately if needed

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
