[package]
name = "rust-audio-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_audio_engine"
crate-type = ["cdylib"]  # Create dynamic library for Python

[dependencies]
# Python bindings (updated for Python 3.13 support)
pyo3 = { version = "0.22", features = ["extension-module"] }

# MIDI parsing and synthesis
midly = "0.5"           # Fast MIDI parser
rustysynth = "1.3"      # SoundFont synthesizer (pure Rust, fast!)

# Audio I/O
hound = "3.5"           # WAV file reading/writing

# Metal GPU acceleration (macOS only)
metal = "0.29"
core-foundation = "0.9"
objc = "0.2"

# Utilities
anyhow = "1.0"          # Error handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio analysis (Phase 2)
rustfft = "6.2"         # Fast Fourier Transform for pitch detection
realfft = "3.3"         # Real-valued FFT (more efficient for audio)

[profile.release]
opt-level = 3           # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization (slower compile)
strip = true           # Remove debug symbols
